Ensure consistent spacing before footer

--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ header .container {
 }
 main {
     margin-top: var(--header-height);
+    margin-bottom: 1em;
     max-width: 700px;
     margin-left: auto;
     margin-right: auto;
